<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_display"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/display_hours_switch"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_hours" />

        <View
            style="@style/SettingsDividerStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <Switch
            android:id="@+id/display_date_and_time_switch"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_date_and_time" />

    </LinearLayout>
</ScrollView>